syntax = "proto3";

package event;

option go_package = "./gen;gen";

import "google/protobuf/timestamp.proto";

service Events {
    rpc CreateEvent(CreateEventRequest) returns (CreateEventResult) {
    }
    rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResult) {
    }
    rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResult) {
    }
    rpc ListEventOnDate(ListEventOnDateRequest) returns (ListEventOnDateResult) {
    }
    rpc ListEventOnWeek(ListEventOnWeekRequest) returns (ListEventOnWeekResult) {
    }
    rpc ListEventOnMonth(ListEventOnMonthRequest) returns (ListEventOnMonthResult) {
    }
}

message Event {
    int64 ID = 1;
    string Title = 2;
    google.protobuf.Timestamp StartTime = 3;
    google.protobuf.Timestamp EndTime = 4;
    string Description = 5;
    int64 OwnUserID = 6;
}

message Error {
    string Description = 1;
}

message CreateEventRequest {
    Event Data = 1;
}

message CreateEventResult {
    int64 ID = 1;
    Error Err = 2;
}

message UpdateEventRequest {
    Event Data = 1;
}

message UpdateEventResult {
    Error Err = 1;
}

message DeleteEventRequest {
    int64 ID = 1;
}

message DeleteEventResult {
    Error Err = 1;
}

message ListEventOnDateRequest {
    int32 Year = 1;
    int32 Month = 2;
    int32 Day = 3;
}

message ListEventOnDateResult {
    repeated Event Data = 1;
    Error Err = 2;
}

message ListEventOnWeekRequest {
    int32 Year = 1;
    int32 Week = 2;
}

message ListEventOnWeekResult {
    repeated Event Data = 1;
    Error Err = 2;
}

message ListEventOnMonthRequest {
    int32 Year = 1;
    int32 Month = 2;
}

message ListEventOnMonthResult {
    repeated Event Data = 1;
    Error Err = 2;
}
